[package]
name = "stack-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.18.0", features = ["full"] }

anyhow = "=1.0.43"
bytes = "=1.1.0"
lazy_static = "=1.4.0"

tracing = { version = "=0.1.26", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "=0.2.23" 
tracing-appender = "=0.1.2"

# serde = "=1.0.126"
# serde_derive = "=1.0.126"
# serde_json = "=1.0.65"
strum = "=0.24.1"
strum_macros = "=0.24.0"